--- a/index.html
+++ b/index.html
@@ -4,96 +4,109 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrei CV</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="imgs/My_Photo.jpg" alt="Андрей Пасиченка" width="150" />
+    <div class="container">
+      <div class="info">
+        <img src="imgs/My_Photo.jpg" alt="Андрей Пасиченка" class="avatar" />
 
-    <h1>Андрей Пасиченка</h1>
+        <div class="info-text">
+          <h1>Андрей Пасиченка</h1>
 
-    <br />
+          <br />
 
-    <p>
-      Меня зовут Андрей, мне 19 лет и я учусь на программиста. Учусь я в
-      <strong>Варшавской Академии</strong>, а также занимаюсь
-      <strong>самообучением</strong>.
-    </p>
+          <p>
+            Меня зовут Андрей, мне 19 лет и я учусь на программиста. Учусь я в
+            <strong>Варшавской Академии</strong>, а также занимаюсь
+            <strong>самообучением</strong>.
+          </p>
 
-    <p>
-      Я люблю
-      <em>играть в игры, писать код и отдыхать со своими друзьями</em>.
-    </p>
+          <p>
+            Я люблю
+            <em>играть в игры, писать код и отдыхать со своими друзьями</em>.
+          </p>
 
-    <p><strong>Список социальных сетей:</strong></p>
+          <h4>Список социальных сетей:</h4>
 
-    <p>
-      <a href="https://vk.com/polska_kurwa" target="_blank">VKontakte</a> |
-      <a
-        href="https://www.linkedin.com/in/andrei-pasichenka-053206248/"
-        target="_blank"
-        >LinkedIn</a
-      >
-      | <a href="https://github.com/Packneu" target="_blank">GitHub</a>
-    </p>
-
-    <h2>Мои Хобби</h2>
-    <ol>
-      <li>Компьютерные игры</li>
-      <li>Настольные игры</li>
-      <li>Кодинг</li>
-    </ol>
-
-    <h2>Опыт Работы</h2>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Название</th>
-          <th>Должность</th>
-          <th>Год</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>LPTracker</td>
-          <td>Frontend</td>
-          <td>2015-2016</td>
-        </tr>
-        <tr>
-          <td>EPAM</td>
-          <td>Software Engineer</td>
-          <td>2016-2017</td>
-        </tr>
-        <tr>
-          <td>Software Outsourcing Services</td>
-          <td>Senior Frontend</td>
-          <td>2017-2019</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h2>Связаться со мной</h2>
-
-    <form>
-      <div>
-        <label for="name">Ваше имя:</label>
-        <input type="text" id="name" placeholder="Введите имя" />
+          <a href="https://vk.com/polska_kurwa" target="_blank">VKontakte</a> |
+          <a
+            href="https://www.linkedin.com/in/andrei-pasichenka-053206248/"
+            target="_blank"
+            >LinkedIn</a
+          >
+          | <a href="https://github.com/Packneu" target="_blank">GitHub</a>
+        </div>
       </div>
-      <div>
-        <label for="email">Ваш email:</label>
-        <input type="email" id="email" placeholder="Введите email" />
+
+      <div class="card bg-green">
+        <h2>Мои Хобби</h2>
+
+        <ol class="list">
+          <li>Компьютерные игры</li>
+          <li>Настольные игры</li>
+          <li>Кодинг</li>
+        </ol>
       </div>
-      <div>
-        <label for="message">Ваше Сообщение:</label>
-        <br />
-        <textarea
-          name="message"
-          id="message"
-          cols="15"
-          rows="5"
-          placeholder="Введите сообщение..."
-        ></textarea>
+      <div class="card bg-red">
+        <h2>Опыт Работы</h2>
+
+        <table class="table">
+          <!-- <thead>
+            <tr>
+              <th>Название</th>
+              <th>Должность</th>
+              <th>Год</th>
+            </tr>
+          </thead> -->
+          <tbody>
+            <tr>
+              <td>LPTracker</td>
+              <td>Frontend</td>
+              <td>2015-2016</td>
+            </tr>
+            <tr>
+              <td>EPAM</td>
+              <td>Software Engineer</td>
+              <td>2016-2017</td>
+            </tr>
+            <tr>
+              <td>Software Outsourcing Services</td>
+              <td>Senior Frontend</td>
+              <td>2017-2019</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <button type="submit">Отправить!</button>
-    </form>
+
+      <form action="/" class="form">
+        <h2>Связаться со мной</h2>
+
+        <div class="form-row">
+          <div class="form-group">
+            <label for="name">Ваше имя:</label>
+            <input type="text" id="name" placeholder="Введите имя" />
+          </div>
+
+          <div class="form-group">
+            <label for="email">Ваш email:</label>
+            <input type="email" id="email" placeholder="Введите email" />
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="message">Ваше Сообщение:</label>
+          <textarea
+            name="message"
+            id="message"
+            cols="15"
+            rows="5"
+            placeholder="Введите сообщение..."
+          ></textarea>
+        </div>
+
+        <button type="submit" class="btn">Отправить!</button>
+      </form>
+    </div>
   </body>
 </html>
